More elaborate user-bible access page
https://github.com/bibledit/cloud/issues/1017

--- a/Makefile.am
+++ b/Makefile.am
@@ -160,6 +160,7 @@ libbibledit_a_SOURCES = \
 	manage/exports.cpp \
 	manage/write.cpp \
 	manage/privileges.cpp \
+	manage/bibles.cpp \
 	system/index.cpp \
 	system/logic.cpp \
 	collaboration/index.cpp \
