--- a/Makefile.in
+++ b/Makefile.in
@@ -262,22 +262,22 @@ am_libbibledit_a_OBJECTS = library/bibledit.$(OBJEXT) \
 	resource/bb2resource.$(OBJEXT) \
 	resource/convert2resource.$(OBJEXT) \
 	resource/convert2bible.$(OBJEXT) resource/manage.$(OBJEXT) \
-	resource/print.$(OBJEXT) resource/download.$(OBJEXT) \
-	resource/sword.$(OBJEXT) resource/select.$(OBJEXT) \
-	resource/cache.$(OBJEXT) resource/user9edit.$(OBJEXT) \
-	resource/user1edit.$(OBJEXT) resource/user9view.$(OBJEXT) \
-	resource/user1view.$(OBJEXT) resource/bbgateway.$(OBJEXT) \
-	resource/studylight.$(OBJEXT) resource/unload.$(OBJEXT) \
-	jsonxx/jsonxx.$(OBJEXT) mapping/index.$(OBJEXT) \
-	mapping/map.$(OBJEXT) statistics/statistics.$(OBJEXT) \
-	changes/change.$(OBJEXT) changes/changes.$(OBJEXT) \
-	changes/logic.$(OBJEXT) changes/manage.$(OBJEXT) \
-	changes/modifications.$(OBJEXT) changes/statistics.$(OBJEXT) \
-	sprint/burndown.$(OBJEXT) sprint/index.$(OBJEXT) \
-	checks/run.$(OBJEXT) checks/headers.$(OBJEXT) \
-	checks/index.$(OBJEXT) checks/issues.$(OBJEXT) \
-	checks/logic.$(OBJEXT) checks/sentences.$(OBJEXT) \
-	checks/settings.$(OBJEXT) checks/settingspatterns.$(OBJEXT) \
+	resource/download.$(OBJEXT) resource/sword.$(OBJEXT) \
+	resource/select.$(OBJEXT) resource/cache.$(OBJEXT) \
+	resource/user9edit.$(OBJEXT) resource/user1edit.$(OBJEXT) \
+	resource/user9view.$(OBJEXT) resource/user1view.$(OBJEXT) \
+	resource/bbgateway.$(OBJEXT) resource/studylight.$(OBJEXT) \
+	resource/unload.$(OBJEXT) jsonxx/jsonxx.$(OBJEXT) \
+	mapping/index.$(OBJEXT) mapping/map.$(OBJEXT) \
+	statistics/statistics.$(OBJEXT) changes/change.$(OBJEXT) \
+	changes/changes.$(OBJEXT) changes/logic.$(OBJEXT) \
+	changes/manage.$(OBJEXT) changes/modifications.$(OBJEXT) \
+	changes/statistics.$(OBJEXT) sprint/burndown.$(OBJEXT) \
+	sprint/index.$(OBJEXT) checks/run.$(OBJEXT) \
+	checks/headers.$(OBJEXT) checks/index.$(OBJEXT) \
+	checks/issues.$(OBJEXT) checks/logic.$(OBJEXT) \
+	checks/sentences.$(OBJEXT) checks/settings.$(OBJEXT) \
+	checks/settingspatterns.$(OBJEXT) \
 	checks/settingssentences.$(OBJEXT) checks/space.$(OBJEXT) \
 	checks/suppress.$(OBJEXT) checks/usfm.$(OBJEXT) \
 	checks/verses.$(OBJEXT) checks/versification.$(OBJEXT) \
@@ -748,8 +748,8 @@ am__depfiles_remade = access/$(DEPDIR)/bible.Po \
 	resource/$(DEPDIR)/external.Po resource/$(DEPDIR)/get.Po \
 	resource/$(DEPDIR)/index.Po resource/$(DEPDIR)/logic.Po \
 	resource/$(DEPDIR)/manage.Po resource/$(DEPDIR)/organize.Po \
-	resource/$(DEPDIR)/print.Po resource/$(DEPDIR)/select.Po \
-	resource/$(DEPDIR)/studylight.Po resource/$(DEPDIR)/sword.Po \
+	resource/$(DEPDIR)/select.Po resource/$(DEPDIR)/studylight.Po \
+	resource/$(DEPDIR)/sword.Po \
 	resource/$(DEPDIR)/translated1edit.Po \
 	resource/$(DEPDIR)/translated9edit.Po \
 	resource/$(DEPDIR)/unload.Po resource/$(DEPDIR)/user1edit.Po \
@@ -1367,7 +1367,6 @@ libbibledit_a_SOURCES = \
 	resource/convert2resource.cpp \
 	resource/convert2bible.cpp \
 	resource/manage.cpp \
-	resource/print.cpp \
 	resource/download.cpp \
 	resource/sword.cpp \
 	resource/select.cpp \
@@ -2715,8 +2714,6 @@ resource/convert2resource.$(OBJEXT): resource/$(am__dirstamp) \
 resource/convert2bible.$(OBJEXT): resource/$(am__dirstamp) \
 	resource/$(DEPDIR)/$(am__dirstamp)
 resource/manage.$(OBJEXT): resource/$(am__dirstamp) \
-	resource/$(DEPDIR)/$(am__dirstamp)
-resource/print.$(OBJEXT): resource/$(am__dirstamp) \
 	resource/$(DEPDIR)/$(am__dirstamp)
 resource/download.$(OBJEXT): resource/$(am__dirstamp) \
 	resource/$(DEPDIR)/$(am__dirstamp)
@@ -4199,7 +4196,6 @@ distclean-compile:
 @AMDEP_TRUE@@am__include@ @am__quote@resource/$(DEPDIR)/logic.Po@am__quote@ # am--include-marker
 @AMDEP_TRUE@@am__include@ @am__quote@resource/$(DEPDIR)/manage.Po@am__quote@ # am--include-marker
 @AMDEP_TRUE@@am__include@ @am__quote@resource/$(DEPDIR)/organize.Po@am__quote@ # am--include-marker
-@AMDEP_TRUE@@am__include@ @am__quote@resource/$(DEPDIR)/print.Po@am__quote@ # am--include-marker
 @AMDEP_TRUE@@am__include@ @am__quote@resource/$(DEPDIR)/select.Po@am__quote@ # am--include-marker
 @AMDEP_TRUE@@am__include@ @am__quote@resource/$(DEPDIR)/studylight.Po@am__quote@ # am--include-marker
 @AMDEP_TRUE@@am__include@ @am__quote@resource/$(DEPDIR)/sword.Po@am__quote@ # am--include-marker
@@ -5396,7 +5392,6 @@ distclean: distclean-am
 	-rm -f resource/$(DEPDIR)/logic.Po
 	-rm -f resource/$(DEPDIR)/manage.Po
 	-rm -f resource/$(DEPDIR)/organize.Po
-	-rm -f resource/$(DEPDIR)/print.Po
 	-rm -f resource/$(DEPDIR)/select.Po
 	-rm -f resource/$(DEPDIR)/studylight.Po
 	-rm -f resource/$(DEPDIR)/sword.Po
@@ -6076,7 +6071,6 @@ maintainer-clean: maintainer-clean-am
 	-rm -f resource/$(DEPDIR)/logic.Po
 	-rm -f resource/$(DEPDIR)/manage.Po
 	-rm -f resource/$(DEPDIR)/organize.Po
-	-rm -f resource/$(DEPDIR)/print.Po
 	-rm -f resource/$(DEPDIR)/select.Po
 	-rm -f resource/$(DEPDIR)/studylight.Po
 	-rm -f resource/$(DEPDIR)/sword.Po
